# nous-memory

./: .gitignore  LICENSE  README.md  pyproject.toml
src/nous_memory/: __init__.py  __main__.py  bootstrap.py  bridge.py  cli.py  core.py  dream.py  entities.py  episodes.py  kv.py  mcp_server.py  memory.py  models.py  patterns.py  prompt.py  sessions.py  stats.py  tasks.py
